Remove outdated HTML files for "Values Creation" in both Vietnamese and English versions

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
             <div class="logo-container">
                 <i class="fas fa-globe"></i>
                 <h1 class="logo">My Personal Planet </h1>
-                <div class="ai-indicator" title="This planet has been created with the assistance of Artificial Intelligence (AI)">
-                    <i class="fas fa-sparkles" aria-hidden="true"></i>
-                    <span>AI</span>
-                </div>
+                <select id="font-size-select" class="font-size-select font-size-default" aria-label="Font size">
+                    <option value="default" class="default">AI</option>
+                    <option value="larger" class="larger">AI</option>
+                    <option value="large" class="large">AI</option>
+                </select>
             </div>
             <div class="header-controls">
                 <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language" title="Switch language">
