--- a/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value.html
+++ b/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value.html
@@ -77,6 +77,74 @@
                 <p>From this understanding, the core question of creating value is no longer “how much have I done?”, but “what has what I done created, for whom, and under what conditions?” The following chapters will continue to delve deeper from this foundation.</p>
             </div>
 
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Outline summary notes</h3>
+                <ul>
+                    <li>“Value” is not self-evident: the same thing can help or harm depending on context.</li>
+                    <li>Value forms only when it creates real benefit/meaning for a specific subject in a specific context.</li>
+                    <li>Value is established by real impact, not by intention or declaration.</li>
+                    <li>Two main forms: tangible (material, tools) and intangible (ideas, knowledge, beliefs).</li>
+                    <li>Value is context-dependent; it must be re-questioned when contexts change.</li>
+                    <li>Examples: the internet, antibiotics, weapons… all shift in value by user and circumstances.</li>
+                    <li>Practical principle: benefit &gt; harm in a given context implies value.</li>
+                    <li>Core question: what did we create, for whom, and under what conditions?</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Text mind map (tree)</summary>
+                    <pre class="mm-text-tree">
+1. UNDERSTANDING THE NATURE OF VALUE
+├─ Central claim
+│  └─ Value does not exist on its own → formed by context, consequences, and real impact
+│
+├─ 1) Why “value” is not self-evident
+│  ├─ “Value” is used everywhere (work / society / personal life) but rarely defined seriously
+│  ├─ Observed paradoxes
+│  │  ├─ An action: praised today, condemned tomorrow
+│  │  ├─ A tool: saves in one hand, harms in another
+│  │  └─ A belief: once progressive, later becomes a barrier as context shifts
+│  └─ Conclusion: if value were immutable, these paradoxes wouldn’t exist
+│
+├─ 2) What value means in a real context
+│  ├─ Value is abstract but not vague
+│  ├─ Conditions for something to become “value”
+│  │  ├─ Creates real benefit/meaning
+│  │  ├─ For a specific subject
+│  │  ├─ In a specific context
+│  │  └─ Through consequences that can be felt/observed
+│  └─ Value is not in declarations or intentions → established by impact in real life
+│
+├─ 3) Forms and origins of value
+│  ├─ Two main forms
+│  │  ├─ Tangible: material/physical benefits (food, water, shelter, tools…)
+│  │  └─ Intangible: ideas, thoughts, philosophies, understanding
+│  ├─ Inherent value
+│  │  └─ At the ecological level: “value of existence”
+│  └─ Created value
+│     └─ When creating objects/ideas/actions → value arises when the result is useful/meaningful for others
+│
+├─ 4) Value depends on context
+│  ├─ Value is rarely absolute
+│  ├─ Reflective question: how many things do we call “valuable” only because we’ve never tested them in another context?
+│  └─ Reminder: our perception of value is shaped by familiar circumstances
+│
+├─ 5) Examples: value shifts by context
+│  ├─ Internet: adults (learning/connection) ↔ children (risk without guidance)
+│  ├─ Antibiotics: life-saving ↔ misuse → resistance
+│  └─ Guns & social beliefs: self-defense ↔ violence; “children as property” shifts with awareness/context
+│
+└─ 6) A practical principle for evaluating value
+├─ Benefit > harm in a given context → considered valuable
+├─ Not an absolute standard → a provisional tool for consideration
+└─ Core question: what do we create, for whom, and under what conditions?
+                    </pre>
+                </details>
+            </div>
+
         </section>
     </article>
 
