--- a/pages/writing-opinion/values-creation/9-accelerating-progress-vn.html
+++ b/pages/writing-opinion/values-creation/9-accelerating-progress-vn.html
@@ -79,14 +79,14 @@
             </div>
 
             <div class="sub-section">
-                <h2>Xây dựng – Đo lường – Học hỏi</h2>
+                <h2>Xây dựng - Đo lường - Học hỏi</h2>
                 <p><strong>Có căn cứ để tiến lên</strong></p>
                 <p>
                     Không thể đánh giá nếu không đo lường.
                     Và không thể học hỏi nếu thiếu căn cứ.
                 </p>
                 <p>
-                    Chu trình Xây dựng – Đo lường – Học hỏi
+                    Chu trình Xây dựng - Đo lường - Học hỏi
                     giúp ta biến cảm nhận thành dữ liệu,
                     biến giả định thành điều có thể kiểm chứng,
                     và biến trải nghiệm thành hiểu biết.
