--- a/pages/writing-opinion/values-creation/contents-vn.html
+++ b/pages/writing-opinion/values-creation/contents-vn.html
@@ -78,7 +78,19 @@
                         <a href="0-introduction-vn.html">Lời Mở Đầu</a>
                         <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
-                    <p style="margin-left: 1.5rem; color: #7f8c8d; font-size: 0.95rem;">Một khung tư duy cá nhân về việc tạo ra giá trị và sống có mục đích</p>
+                    <ul class="toc-subsections">
+                        <li>Không phải công thức thành công</li>
+                        <li>Một khung tư duy cá nhân về giá trị</li>
+                        <li>Triết học như chất liệu gợi mở</li>
+                        <li>Định hướng suy nghĩ và hành động</li>
+                    </ul>
+                </div>
+
+                <div class="toc-chapter">
+                    <div class="toc-chapter-title">
+                        <a href="mind-map-vn.html">Bản Đồ Tư Duy</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
+                    </div>
                 </div>
             </div>
 
@@ -91,14 +103,12 @@
                         <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Định nghĩa giá trị</li>
-                        <li>Hai hình thức giá trị: Hữu hình và Vô hình</li>
-                        <li>Giá trị vốn có</li>
-                        <li>Giá trị qua sáng tạo</li>
-                        <li>Tính tương đối của giá trị</li>
-                        <li>Nguyên tắc đánh giá</li>
-                        <li>Giá trị và mối quan hệ</li>
-                        <li>Phân biệt giá trị và đầu ra</li>
+                        <li>Vì sao “giá trị” không phải là khái niệm hiển nhiên</li>
+                        <li>Giá trị chỉ tồn tại trong bối cảnh thực tế</li>
+                        <li>Các dạng và nguồn gốc của giá trị</li>
+                        <li>Giá trị không tuyệt đối và phụ thuộc hoàn cảnh</li>
+                        <li>Những ví dụ về giá trị thay đổi theo bối cảnh</li>
+                        <li>Một nguyên tắc thực tế để đánh giá giá trị</li>
                     </ul>
                 </div>
 
@@ -108,12 +118,13 @@
                         <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Ý nghĩa đến từ sự đóng góp</li>
-                        <li>Giá trị được định nghĩa bởi những gì chúng ta tạo ra, không phải những gì chúng ta sở hữu</li>
-                        <li>Kiến thức chỉ có ý nghĩa khi được áp dụng để tạo ra kết quả</li>
-                        <li>Mối quan hệ và xã hội vận hành dựa trên sự trao đổi giá trị</li>
-                        <li>Nơi làm việc trả công cho kết quả, không chỉ cho kiến thức</li>
-                        <li>Hiểu "tại sao" trước "như thế nào"</li>
+                        <li>Giá trị như nền móng của ý nghĩa đời sống</li>
+                        <li>Ý nghĩa không phải để tìm, mà để tạo</li>
+                        <li>Giá trị không nhất thiết phải được nhìn thấy</li>
+                        <li>Giá trị được hình thành qua hành động cụ thể</li>
+                        <li>Forrest Gump - giá trị đến từ hành động</li>
+                        <li>Giá trị trong tri thức, tư tưởng và xã hội</li>
+                        <li>Vì sao tạo ra giá trị là điều không thể né tránh</li>
                     </ul>
                 </div>
             </div>
@@ -127,13 +138,15 @@
                         <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Hành động nhỏ, đều đặn tạo nên giá trị lớn</li>
-                        <li>Nhận thức trao ý nghĩa cho hành động</li>
-                        <li>Hành động là điều kiện tồn tại</li>
-                        <li>Giá trị cần bối cảnh để đánh giá</li>
-                        <li>Trí tuệ dẫn dắt hành động và trách nhiệm</li>
-                        <li>Giá trị bền vững = Hành động + Hiểu biết + Trách nhiệm</li>
+                        <li>Giá trị được tạo ra từ những hành động nhỏ và đều đặn</li>
+                        <li>Ý nghĩa nằm trong cách ta nhìn hành động của mình</li>
+                        <li>Kỷ luật hành động như điều kiện để tiếp tục tồn tại</li>
+                        <li>Hành động chưa đủ nếu thiếu trí tuệ và bối cảnh</li>
+                        <li>Khi trí tuệ kết hợp với tổ chức, giá trị có thể vượt thời gian</li>
+                        <li>Trí tuệ cần đi cùng trách nhiệm</li>
+                        <li>Kết hợp hành động, trí tuệ và trách nhiệm</li>
                     </ul>
+
                 </div>
 
                 <div class="toc-chapter">
@@ -142,10 +155,15 @@
                         <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Tạo ra giá trị bền vững</li>
-                        <li>Các cân nhắc và tình huống đạo đức</li>
-                        <li>Lợi nhuận ngắn hạn vs niềm tin dài hạn</li>
-                        <li>Tối ưu hóa vs khai thác</li>
+                        <li>Đạo đức như tiêu chí nền tảng để đánh giá giá trị</li>
+                        <li>Nguyên tắc tối thiểu: không gây tổn hại</li>
+                        <li>Giới hạn của đời sống: ta không thể kiểm soát người khác</li>
+                        <li>Một lựa chọn đi xa hơn: yêu thương như điểm tựa nội tâm</li>
+                        <li>Khi nguyên tắc tối thiểu được lan tỏa</li>
+                        <li>Tổn hại trực tiếp và tổn hại gián tiếp</li>
+                        <li>Bất định của hệ quả và thái độ cần có khi hành động</li>
+                        <li>Chủ ý dừng ở nguyên tắc tối thiểu</li>
+                        <li>Nền móng cho giá trị bền vững</li>
                     </ul>
                 </div>
             </div>
@@ -159,36 +177,47 @@
                         <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Sức khỏe thể chất</li>
-                        <li>Sức khỏe tinh thần</li>
-                        <li>Sự minh mẫn của tâm trí</li>
+                        <li>Sức bền đến từ cân bằng giữa áp lực và phục hồi</li>
+                        <li>Sức khỏe và minh mẫn là điều kiện để ý định được duy trì</li>
+                        <li>Tính liên tục của hành động đòi hỏi nền thể chất tối thiểu</li>
+                        <li>Sức khỏe như nền tảng âm thầm của sự tỉnh táo</li>
+                        <li>Trí lực giúp hành động không đi chệch hướng</li>
+                        <li>Trí lực còn là khả năng không hành động khi không tạo ra giá trị</li>
+                        <li>Từ trí lực đến nhận diện bẫy tư duy</li>
+                        <li>Khi điều kiện nền không đủ, giá trị dễ bị bóp méo</li>
                     </ul>
                 </div>
 
                 <div class="toc-chapter">
                     <div class="toc-chapter-title">
-                        <a href="6-common-traps-in-value-creation-vn.html">6. Những Bẫy Phổ Biến Trong Tạo Ra Giá Trị</a>
+                        <a href="6-0-common-traps-in-value-creation-vn.html">6. Những Bẫy Phổ Biến Trong Tạo Ra Giá Trị</a>
                         <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Dừng phản xạ, lắng nghe và trì hoãn phán xét</li>
-                        <li>Đặt câu hỏi, phản biện giả định và nhận diện thiên kiến</li>
-                        <li>Trí tuệ dẫn dắt hành động để tránh hệ quả sai lầm</li>
-                        <li>Học từ sai lầm và phòng ngừa sai lầm sớm</li>
-                        <li>Tôn trọng bối cảnh và kiên nhẫn trước quyết định</li>
+                        <li>Vì sao con người có thể đi chệch hướng khi đang cố làm điều đúng</li>
+                        <li>Những sai lầm mang dáng vẻ của sự hợp lý và kinh nghiệm</li>
+                        <li>Cạm bẫy như những khuynh hướng phổ quát của tư duy</li>
+                        <li>Kết luận sớm hơn mức cần thiết</li>
+                        <li>Khi các cạm bẫy liên kết thành chuỗi</li>
+                        <li>Giá trị mong manh được tạo ra từ sự chắc chắn sai lệch</li>
+                        <li>Kỷ luật dừng lại đúng lúc</li>
+                        <li>Nhận diện cạm bẫy bằng sự tỉnh táo, không phải ghi nhớ</li>
                     </ul>
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        7. Xây Dựng Kỹ Năng Cốt Lõi
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="7-0-core-skills-building-vn.html">7. Xây Dựng Kỹ Năng Cốt Lõi</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Học hỏi liên tục</li>
-                        <li>Tích lũy kỹ năng</li>
-                        <li>Tư duy phát triển</li>
-                        <li>Khát vọng & phấn đấu tiến bộ</li>
+                        <li>Giới thiệu: Nền tảng cho mọi hành trình tạo ra giá trị</li>
+                        <li>Kỹ năng 1 - Khả năng học hỏi và tự học</li>
+                        <li>Kỹ năng 2 - Kiên trì</li>
+                        <li>Kỹ năng 3 - Tự tạo động lực</li>
+                        <li>Kỹ năng 4 - Hình thành thói quen</li>
+                        <li>Kỹ năng 5 - Biết</li>
+                        <li>Tổng kết: Năm kỹ năng, một con đường</li>
                     </ul>
                 </div>
             </div>
@@ -197,41 +226,35 @@
                 <h2 class="main-point">Phần IV: Chiến Lược Và Hệ Thống</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        8. Khung Chiến Lược
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="8-0-strategic-frameworks-vn.html">8. Khung Chiến Lược</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Mục đích và tầm nhìn</li>
-                        <li>Nguyên tắc 80/20</li>
-                        <li>Đặt mục tiêu (SMART)</li>
-                        <li>Quản lý thời gian</li>
-                        <li>Sản phẩm tối thiểu khả thi (MVP)</li>
+                        <li>Khoảng trống giữa mục tiêu, chiến lược và giá trị thực tế</li>
+                        <li>Vì sao nỗ lực và mục tiêu chưa đủ để tạo ra giá trị</li>
+                        <li>Từ điều ta theo đuổi đến vấn đề cần giải quyết</li>
+                        <li>Lựa chọn chiến lược và hệ quả của lựa chọn</li>
+                        <li>Từ lựa chọn đến hành vi hằng ngày</li>
+                        <li>Chiến lược như một giả thuyết sống</li>
+                        <li>Học hỏi và tự hiệu chỉnh trong quá trình thực thi</li>
+                        <li>Khi chiến lược trở thành cơ chế tạo giá trị bền vững</li>
                     </ul>
+
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        9. Tăng Tốc Tiến Độ
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="9-accelerating-progress-vn.html">9. Tăng Tốc Tiến Độ</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Vượt qua sự trì hoãn</li>
-                        <li>Vòng lặp phản hồi</li>
-                        <li>Tận dụng đòn bẩy (con người, công cụ, hệ thống)</li>
-                        <li>Xây dựng - Đo lường - Học hỏi</li>
-                    </ul>
-                </div>
-
-                <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        10. Động Lực, Đà Tiến Và Sự Nhất Quán
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
-                    </div>
-                    <ul class="toc-subsections">
-                        <li>Chu trình Hành động → Kết quả → Động lực</li>
-                        <li>Những chiến thắng nhỏ và củng cố tâm lý</li>
-                        <li>Duy trì đà tiến</li>
+                        <li>Vì sao con người dừng lại không phải vì thiếu kiến thức, mà vì thiếu đà</li>
+                        <li>Những chiến thắng nhỏ và sự củng cố tâm lý</li>
+                        <li>Vượt qua sự trì hoãn: không thúc ép, nhưng phải khởi động</li>
+                        <li>Vòng lặp phản hồi: tinh chỉnh thay vì tự phán xét</li>
+                        <li>Xây dựng - Đo lường - Học hỏi: có căn cứ để tiến lên</li>
+                        <li>Kết: nhất quán từ bước nhỏ, tăng tốc bằng phản hồi</li>
                     </ul>
                 </div>
             </div>
@@ -240,40 +263,54 @@
                 <h2 class="main-point">Phần V: Di Sản Và Tác Động Lâu Dài</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        11. Di Sản Và Tác Động Lâu Dài
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="10-legacy-and-long-term-impact-vn.html">10. Di Sản Và Tác Động Lâu Dài</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
+                        <li>Mở đầu: Khi giá trị có thể sống ngoài phạm vi cá nhân</li>
+                        <li>Không bắt buộc, chỉ khi có thể</li>
                         <li>Giá trị vượt ra ngoài cá nhân</li>
                         <li>Dẫn dắt bằng gương mẫu</li>
-                        <li>Cố vấn</li>
-                        <li>Tài liệu hóa</li>
-                        <li>Xây dựng văn hóa</li>
+                        <li>Cố vấn: giúp người khác đi nhanh hơn, không đi giống mình</li>
+                        <li>Tài liệu hóa: để giá trị không biến mất theo thời gian</li>
+                        <li>Kết: khi giá trị tiếp tục tồn tại mà không cần ta hiện diện</li>
                     </ul>
+
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        12. Bài Học Thực Tế & Suy Ngẫm
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="11-practical-lessons-reflections-vn.html">11. Những Bài Học Thực Tế và Suy Ngẫm</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Các nghiên cứu điển hình về người tạo ra giá trị thành công</li>
-                        <li>Bài học từ các ví dụ thực tế</li>
+                        <li>Vì sao không nên áp đặt “công thức thành công”</li>
+                        <li>Thiên kiến khi nhìn thành công của người khác</li>
+                        <li>Để chương này mở cho sự quan sát và kiểm chứng cá nhân</li>
+                        <li>Những con đường thành công khác - và cả những con đường trái ngược</li>
+                        <li>Khi việc không tìm thấy khuôn mẫu trở thành một tín hiệu tốt</li>
+                        <li>Con đường giá trị như một hành trình tự thân</li>
+                        <li>Biến kiến thức thành của mình qua trải nghiệm và lựa chọn</li>
                     </ul>
+
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        13. Kết Luận
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="12-conclusion-vn.html">12. Kết Luận</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Tóm tắt các nguyên tắc chính</li>
-                        <li>Khuyến khích tạo ra giá trị suốt đời</li>
-                        <li>Những suy nghĩ cuối cùng về việc sống một cuộc đời có mục đích</li>
+                        <li>Không có công thức thành công chung cho mọi người</li>
+                        <li>Giá trị như một dòng chảy liên kết giữa tư duy, hành động và điều chỉnh</li>
+                        <li>Giá trị được hình thành trong những giai đoạn chưa rõ kết quả</li>
+                        <li>Sai lầm như một phần tất yếu của hành trình tạo ra giá trị</li>
+                        <li>Một thái độ cần giữ lại sau trang cuối</li>
+                        <li>Khi cuốn sách khép lại và hành trình thực sự bắt đầu</li>
+                        <li>Giá trị bắt đầu khi ta hiểu mình đang đi đâu và vì sao vẫn bước tiếp</li>
                     </ul>
+
                 </div>
             </div>
         </section>
