--- a/pages/writing-opinion/values-creation/contents.html
+++ b/pages/writing-opinion/values-creation/contents.html
@@ -80,6 +80,13 @@
                     </div>
                     <p style="margin-left: 1.5rem; color: #7f8c8d; font-size: 0.95rem;">A personal framework for creating value and living with purpose</p>
                 </div>
+
+                <div class="toc-chapter">
+                    <div class="toc-chapter-title">
+                        <a href="mind-map.html">Mind Map</a>
+                        <span class="status-badge status-published">Published</span>
+                    </div>
+                </div>
             </div>
 
             <div class="toc-section">
@@ -180,15 +187,18 @@
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        7. Core Skills Building
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="7-0-core-skills-building.html">7. Core Skills Building</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Continuous Learning</li>
-                        <li>Skill Compounding</li>
-                        <li>Growth Mindset</li>
-                        <li>Ambition & Striving for Progress</li>
+                        <li>Introduction: Foundation for the value-creation journey</li>
+                        <li>Skill 1 - Learning and self-learning</li>
+                        <li>Skill 2 - Perseverance</li>
+                        <li>Skill 3 - Self-motivation</li>
+                        <li>Skill 4 - Habit formation</li>
+                        <li>Skill 5 - Knowing</li>
+                        <li>Summary: Five skills, one path</li>
                     </ul>
                 </div>
             </div>
@@ -197,82 +207,86 @@
                 <h2 class="main-point">Part IV: Strategies and Systems</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        8. Strategic Framework
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="8-0-strategic-frameworks.html">8. Strategic Framework</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Purpose and Vision</li>
-                        <li>80/20 Principle</li>
-                        <li>Goal Setting (SMART)</li>
-                        <li>Time Management</li>
-                        <li>Minimum Viable Product (MVP)</li>
+                        <li>The gap between goals, strategy, and real value</li>
+                        <li>Why effort and goals are not enough</li>
+                        <li>From what we pursue to the problem to solve</li>
+                        <li>Strategic choices and their consequences</li>
+                        <li>From choices to daily behaviors</li>
+                        <li>Strategy as a living hypothesis</li>
+                        <li>Learning and self-correction in execution</li>
+                        <li>When strategy becomes a sustainable value-creation mechanism</li>
                     </ul>
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        9. Accelerating Progress
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="9-accelerating-progress.html">9. Accelerating Progress</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Overcoming Procrastination</li>
-                        <li>Feedback Loops</li>
-                        <li>Leverage (people, tools, systems)</li>
-                        <li>Build - Measure - Learn</li>
-                    </ul>
-                </div>
-
-                <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        10. Motivation, Momentum, and Consistency
-                        <span class="status-badge status-planned">Planned</span>
-                    </div>
-                    <ul class="toc-subsections">
-                        <li>Action → Result → Motivation cycle</li>
+                        <li>Why people stop not from lack of knowledge, but lack of momentum</li>
                         <li>Small wins and psychological reinforcement</li>
-                        <li>Maintaining momentum</li>
+                        <li>Overcoming procrastination: don’t force, but must start</li>
+                        <li>Feedback loops: refine rather than self-judge</li>
+                        <li>Build - Measure - Learn: evidence to move forward</li>
+                        <li>Ending: consistency from small steps, acceleration through feedback</li>
                     </ul>
                 </div>
             </div>
 
             <div class="toc-section">
-                <h2 class="main-point">Part V: Legacy and Impact</h2>
+                <h2 class="main-point">Part V: Legacy and Long-Term Impact</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        11. Legacy and Long-Term Impact
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="10-legacy-and-long-term-impact.html">10. Legacy and Long-Term Impact</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
+                        <li>Opening: when value can live beyond the individual</li>
+                        <li>Not mandatory, only when possible</li>
                         <li>Value beyond the individual</li>
-                        <li>Leading by Example</li>
-                        <li>Mentorship</li>
-                        <li>Documentation</li>
-                        <li>Building Culture</li>
+                        <li>Leading by example</li>
+                        <li>Mentorship: help others go faster, not go the same</li>
+                        <li>Documentation: so value doesn’t disappear over time</li>
+                        <li>Ending: when value continues without our presence</li>
                     </ul>
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        12. Practical Lessons & Reflections
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="11-practical-lessons-reflections.html">11. Practical Lessons & Reflections</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Case studies of successful value creators</li>
-                        <li>Lessons from real-world examples</li>
+                        <li>Why we shouldn’t impose a “success formula”</li>
+                        <li>Biases when reading others’ success</li>
+                        <li>An open chapter for personal observation and verification</li>
+                        <li>Other paths to success — and even opposite paths</li>
+                        <li>When not finding a template becomes a good signal</li>
+                        <li>Value as a self-directed journey</li>
+                        <li>Making knowledge your own through experience and choice</li>
                     </ul>
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        13. Conclusion
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="12-conclusion.html">12. Conclusion</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Recap of Key Principles</li>
-                        <li>Encouragement for Lifelong Value Creation</li>
-                        <li>Final Thoughts on Living a Purposeful Life</li>
+                        <li>No single success formula for everyone</li>
+                        <li>Value as a flow connecting thought, action, and adjustment</li>
+                        <li>Value formed during phases without clear results</li>
+                        <li>Mistakes as an inevitable part of the journey</li>
+                        <li>A stance to keep after the last page</li>
+                        <li>When the book closes and the real journey begins</li>
+                        <li>Value begins when you know where you stand and why you keep going</li>
                     </ul>
                 </div>
             </div>
